--- a/src/components/icons/Menu.astro
+++ b/src/components/icons/Menu.astro
@@ -1,4 +1,4 @@
 ---
-const { size = 24 } = Astro.props;
+const {viewbox, size = 24, ...rest } = Astro.props;
 ---
-<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M3 6h18M3 12h18M3 18h18"/></svg>
+<svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} {...rest} viewBox=`0 0 ${viewbox} ${viewbox}` fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M3 6h18M3 12h18M3 18h18"/></svg>
