--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,7 @@ const ogImageUrl = "";
 	
 	:root {
 		--accent: #FF8500;
+		--alternative: #282B2E;
 		--color: #1A1A1A;
 		--font-family: 'Geist', system-ui, sans-serif;
 	}
@@ -62,7 +63,7 @@ const ogImageUrl = "";
 
 	body{
 		margin: 0;
-		padding-top: 92px;
+		padding-top: var(--header-offset);
 	}
 
 	a{
