--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
+import Hero from "@sections/Hero.astro"
 import Layout from "@layouts/Layout.astro"
 ---
 <Layout title="Conviértete en partner de Q10">
   <main>
-
+    <Hero/> 
   </main>
 
 <style>
