--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import Hero from "@sections/Hero.astro"
 import Layout from "@layouts/Layout.astro"
+import About from "@components/sections/About.astro"
+import Clients from "@components/sections/Clients.astro"
 ---
 <Layout title="Conviértete en partner de Q10">
   <main>
-    <Hero/> 
+    <Hero/>
+    <About/>
+    <Clients/>
   </main>
 
 <style>
