--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,13 +56,15 @@ import Menu from "./icons/Menu.astro"
 <style>
   header{
     position: fixed;
+    z-index: 100;
     top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px 16px 16px 4px;
     width: 100%;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(16px);
+    background-color: rgba(255, 255, 255, 0.5);
   }
   
   nav.menu--mobile{
