Add new SVG assets and update styles in various components for improved layout and design

--- a/src/components/PricingCard.astro
+++ b/src/components/PricingCard.astro
@@ -45,7 +45,7 @@ const {title, description, items=[], price=null } = Astro.props
   }
 
   ul{
-    list-style-image: url("/bullet.svg");
+    list-style-image: url("/img/bullet.svg");
     line-height: 150%;
   }
 </style>
