--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,18 @@ import Hero from "@sections/Hero.astro"
 import Layout from "@layouts/Layout.astro"
 import About from "@components/sections/About.astro"
 import Clients from "@components/sections/Clients.astro"
+import Testimonials from "@components/sections/Testimonials.astro"
+import Pricing from "@components/sections/Pricing.astro"
+import Steps from "@components/sections/Steps.astro"
 ---
 <Layout title="Conviértete en partner de Q10">
   <main>
     <Hero/>
     <About/>
     <Clients/>
+    <Testimonials/>
+    <Pricing/>
+    <Steps/>
   </main>
 
 <style>
