--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -38,13 +38,13 @@ import World from "@components/icons/World.astro";
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: var(--alternative);
-    color: white;
-    border-radius: 24px;
-    padding: 16px;
-    /* clip-path: polygon(1% 0%, 99% 0%, 99% 100%, 0% 90%); */
-    text-align: center;
     max-width: 500px;
+    padding: 16px;
+    text-align: center;
+    color: white;
+    background-color: var(--alternative);
+    border-radius: 24px;
+    box-shadow: -12px 12px 0px var(--accent);
   }
 
   .about-q10__achieves{
@@ -54,7 +54,7 @@ import World from "@components/icons/World.astro";
   @media screen and (min-width: 768px) {
     section{
     margin-inline: 0px;
-    margin-bottom: 128px;
+    margin-bottom: 72px;
   }
   
     .about-q10__container{
