--- a/src/components/sections/Clients.astro
+++ b/src/components/sections/Clients.astro
@@ -26,7 +26,7 @@ import Scroller from "@components/Scroller.astro"
 
 <section class="clients">
   <div class="clients__container">
-    <h2>Unete a otros que han confiado en nosotros</h2>
+    <h2>Únete a otros que han confiado en nosotros</h2>
     <Scroller images={imagesObject}>
   </div>
 </section>
@@ -36,25 +36,25 @@ import Scroller from "@components/Scroller.astro"
     display: flex;
     justify-content: center;
     margin-inline: 16px;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
   }
   
   .clients__container{
     width: 100%;
     max-width: 500px;
-  } 
+  }
+
+  h2{
+    margin-bottom: 0;
+  }
 
   @media screen and (min-width: 768px) {
     section{
       margin-inline: 24px;
-      margin-bottom: 128px;
+      margin-bottom: 72px;
     }
   
     .clients__container{
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      gap: 48px;
       max-width: calc(var(--max-width-sections) - 48px);
       width: 100%;
       margin-inline: 24px;
