--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -44,7 +44,7 @@ import usersImage from "@assets/img/users.webp"
     display: flex;
     flex-direction: column;
     gap: 32px;
-    min-height: calc(100vh - var(--header-offset));
+    margin-bottom: 48px; 
     padding: 0 16px 16px;
   }
 
@@ -114,6 +114,7 @@ import usersImage from "@assets/img/users.webp"
       gap: 64px;
       max-width: var(--max-width-sections);
       margin-inline: auto;
+      padding: 0 24px 24px;
     }
 
     .hero__content{
